welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: not found: value len
  for (i <- 0 to len(nums)) {
                 ^averageValue:6: error: not found: value len
  return sum/len(nums)
             ^