welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var sum=0
  for (i <- 0 to len(nums)) {
    sum+=nums(i)
  }
  return sum/len(nums)
}